--- a/app.json
+++ b/app.json
@@ -3,6 +3,7 @@
     "name": "Formula1App",
     "slug": "Formula1App",
     "version": "1.0.0",
+    "scheme": "F1App",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
     "userInterfaceStyle": "light",
@@ -25,6 +26,9 @@
     },
     "web": {
       "favicon": "./assets/favicon.png"
-    }
+    },
+    "plugins": [
+      "expo-router"
+    ]
   }
 }
