--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@apollo/client": "^3.8.8",
     "@react-navigation/material-top-tabs": "^6.6.5",
+    "@types/react": "~18.2.14",
     "dayjs": "^1.11.10",
     "expo": "~49.0.15",
     "expo-constants": "~14.4.2",
@@ -17,15 +19,15 @@
     "expo-linking": "~5.0.2",
     "expo-router": "^2.0.0",
     "expo-status-bar": "~1.6.0",
+    "graphql": "^15.8.0",
     "react": "18.2.0",
     "react-native": "0.72.6",
     "react-native-gesture-handler": "~2.12.0",
+    "react-native-pager-view": "6.2.0",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
     "react-native-tab-view": "^3.5.2",
-    "react-native-pager-view": "6.2.0",
-    "typescript": "^5.1.3",
-    "@types/react": "~18.2.14"
+    "typescript": "^5.1.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
